Fix alignment of the cart-overlay

--- a/src/components/CartOverlay.css
+++ b/src/components/CartOverlay.css
@@ -3,8 +3,8 @@
     width: 325px;
     padding: 32px 16px 32px 16px;
     position: absolute;
-    top: 55px;
-    left: 69vw;
+    top: 25px;
+    left: -305px;
     background-color: #fff;
     box-sizing: border-box;
 }
